fix: Adjust the projects' thumbnails on mobiles

--- a/styles/index.css
+++ b/styles/index.css
@@ -263,12 +263,12 @@ li {
 }
 
 .projects-container img {
-    width: 35rem;
-    height: 20rem;
+    /* Make it that the thumbnails have appropriate width on all mobile phones */
+    width: 90vw;
+    /* Make sure that they don't exceed the maximum proper width, aesthetically */
+    max-width: 30rem;
+    height: 15rem;
     margin-bottom: 1rem;
-}
-
-.projects-container img {
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
     border-radius: 0.5rem;
 }
@@ -705,8 +705,6 @@ li {
     }
 
     .projects-container img {
-        width: 30rem;
-        height: 15rem;
         margin: 5rem;
     }
 
